--- a/app/src/main/res/layout/activity_interdetail.xml
+++ b/app/src/main/res/layout/activity_interdetail.xml
@@ -17,6 +17,7 @@
    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
+       android:scrollbars="none"
        android:layout_weight="1"
        android:layout_height="0dp">
 
@@ -32,98 +33,110 @@
                android:layout_height="10dp"/>
 
            <LinearLayout
-               android:paddingRight="16dp"
-               android:paddingLeft="16dp"
                android:layout_width="match_parent"
+               android:layout_height="wrap_content"
                android:orientation="vertical"
-               android:layout_height="wrap_content">
-               
+               android:paddingLeft="16dp"
+               android:paddingRight="16dp">
+
                <!--1-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:text="状态"
-                       style="@style/tv_title_inter"/>
-                  <TextView
-                      android:id="@+id/tv_state"
-                      android:text="待审核"
-                      android:textColor="@color/app_color_blue"
-                      style="@style/tv_content_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="状态"/>
+
+                   <TextView
+                       android:id="@+id/status"
+                       style="@style/tv_content_inter"
+                       android:text="待审核"
+                       android:textColor="@color/app_color_blue"/>
                </LinearLayout>
-              <!-- 2-->
+               <!-- 2-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:id="@+id/tv_input_time"
-                       android:text="预计入库时间"
-                       style="@style/tv_title_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="预计入库时间"/>
+
                    <TextView
-                       android:text="2018/12/31"
-                       style="@style/tv_content_inter"/>
+                       android:id="@+id/instock_date"
+                       style="@style/tv_content_inter"
+                       android:text="2018/12/31"/>
                </LinearLayout>
 
                <!-- 3-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:text="入库单号"
-                       style="@style/tv_title_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="入库单号"/>
+
                    <TextView
-                       android:id="@+id/tv_input_num"
-                       android:text="123314566"
-                       style="@style/tv_content_inter"/>
+                       android:id="@+id/instock_customer_no"
+                       style="@style/tv_content_inter"
+                       android:text="123314566"/>
                </LinearLayout>
 
 
                <!-- 4-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:text="订单来源"
-                       style="@style/tv_title_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="订单来源"/>
+
                    <TextView
-                       android:id="@+id/tv_list_from"
-                       android:text="交易平台"
-                       style="@style/tv_content_inter"/>
+                       android:id="@+id/instock_source"
+                       style="@style/tv_content_inter"
+                       android:text="交易平台"/>
                </LinearLayout>
 
                <!-- 5-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:text="企业联系人"
-                       style="@style/tv_title_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="企业联系人"/>
+
                    <TextView
-                       android:id="@+id/tv_company_cotract"
-                       android:text="方庆阳"
-                       style="@style/tv_content_inter"/>
+                       android:id="@+id/contact_name"
+                       style="@style/tv_content_inter"
+                       android:text="方庆阳"/>
                </LinearLayout>
 
                <!-- 6-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:text="联系电话"
-                       style="@style/tv_title_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="联系电话"/>
+
                    <TextView
-                       android:id="@+id/tv_contact_phone"
-                       android:text="1101191201212"
-                       style="@style/tv_content_inter"/>
+                       android:id="@+id/contact"
+                       style="@style/tv_content_inter"
+                       android:text="1101191201212"/>
                </LinearLayout>
 
                <!-- 7-->
                <LinearLayout
                    style="@style/ll_interorder">
+
                    <TextView
-                       android:text="企业名称"
-                       style="@style/tv_title_inter"/>
+                       style="@style/tv_title_inter"
+                       android:text="企业名称"/>
+
                    <TextView
-                       android:id="@+id/tv_companyname"
-                       android:text="上海国烨跨境电子商务有限公司"
-                       style="@style/tv_content_inter"/>
+                       android:id="@+id/shop_company_name"
+                       style="@style/tv_content_inter"
+                       android:text="上海国烨跨境电子商务有限公司"/>
                </LinearLayout>
-
-
 
 
            </LinearLayout>
@@ -135,11 +148,48 @@
                android:text="商品明细"
                style="@style/tv_title_itmes"/>
 
-               <GridLayout
-                   android:orientation="vertical"
-                   android:id="@+id/gridLayout"
-                   android:layout_width="match_parent"
+
+
+
+           <RelativeLayout
+               android:layout_width="match_parent"
+               android:paddingTop="16dp"
+               android:paddingRight="16dp"
+               android:paddingLeft="16dp"
+               android:layout_height="match_parent">
+
+               <TextView
+                   android:textSize="14sp"
+                   android:textColor="#111111"
+                   android:id="@+id/goods_name"
+                   android:layout_width="wrap_content"
+                   android:text="丙乙烯 | 1000.00吨"
                    android:layout_height="wrap_content"/>
+
+               <TextView
+                   android:id="@+id/goods_nature"
+                   android:textSize="14sp"
+                   android:textColor="#111111"
+                   android:layout_alignParentRight="true"
+                   android:text="内贸内销"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+
+
+               <TextView
+                   android:id="@+id/remark"
+                   android:layout_marginTop="12dp"
+                   android:textSize="14sp"
+                   android:textColor="#919191"
+                   android:text="备注 ：今天是2017年12月7日，距离项目开发时间还有一个月了"
+                   android:layout_below="@+id/goods_name"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+           </RelativeLayout>
+
+
+
+
 
            <!--入库单详细信息-->
            <TextView
@@ -161,7 +211,7 @@
                        style="@style/tv_title_inter"/>
                    <TextView
                        android:text="1234569877895"
-
+                       android:id="@+id/shop_order_no"
                        style="@style/tv_content_inter"/>
                </LinearLayout>
                <!-- 2-->
@@ -171,12 +221,14 @@
                        android:text="创建时间"
                        style="@style/tv_title_inter"/>
                    <TextView
+                       android:id="@+id/create_at"
                        android:text="2018/12/31"
                        style="@style/tv_content_inter"/>
                </LinearLayout>
 
                <!-- 3-->
                <LinearLayout
+                   android:id="@+id/ll_ca_viewpath"
                    style="@style/ll_interorder">
                    <TextView
                        android:text="单据"
@@ -199,6 +251,7 @@
                        android:text="备注"
                        style="@style/tv_title_inter"/>
                    <TextView
+                       android:id="@+id/tv_remark"
                        android:text="今晚打老虎，老虎在哪里"
                        style="@style/tv_content_inter"/>
                </LinearLayout>
@@ -209,74 +262,32 @@
            <!--车辆明细-->
 
            <TextView
+               android:id="@+id/tv_title_car"
                android:text="车辆明细"
                style="@style/tv_title_itmes"/>
 
-           <LinearLayout
-               android:paddingRight="16dp"
-               android:paddingLeft="16dp"
-               android:layout_width="match_parent"
+
+
+           <GridLayout
+                  android:orientation="vertical"
+                  android:id="@+id/gridLayout_car"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"/>
+
+           <TextView
+               android:id="@+id/tv_title_ship"
+               android:text="船舶明细"
+               style="@style/tv_title_itmes"/>
+
+
+
+           <GridLayout
                android:orientation="vertical"
-               android:layout_height="wrap_content">
-
-               <!--1-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="车牌号"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="鄂A123456"
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-               <!-- 2-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="司机姓名"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="柯军"
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-
-               <!-- 3-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="联系方式"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="1100000"
-                       style="@style/tv_content_inter"/>
-
-               </LinearLayout>
+               android:id="@+id/gridLayout_ship"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
 
 
-               <!-- 4-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="身份证号"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="325825196802144578"
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-
-
-               <!-- 5-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="备注"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="CA签章以汉办好，请等"
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-
-           </LinearLayout>
 
 
            <!--入库确认单-->
@@ -296,9 +307,10 @@
                <LinearLayout
                    style="@style/ll_interorder">
                    <TextView
-                       android:text="苯乙烯"
+                       android:text="入库类型"
                        style="@style/tv_title_inter"/>
                    <TextView
+                       android:id="@+id/instock_type"
                        android:text="车入库"
                        style="@style/tv_content_inter"/>
                </LinearLayout>
@@ -309,6 +321,7 @@
                        android:text="实际入库数量"
                        style="@style/tv_title_inter"/>
                    <TextView
+                       android:id="@+id/real_qty"
                        android:text="200吨"
                        style="@style/tv_content_inter"/>
                </LinearLayout>
@@ -320,6 +333,7 @@
                        android:text="仓库联系人"
                        style="@style/tv_title_inter"/>
                    <TextView
+                       android:id="@+id/real_contact_name"
                        android:text="找师傅"
                        style="@style/tv_content_inter"/>
 
@@ -328,6 +342,7 @@
 
                <!-- 4-->
                <LinearLayout
+                   android:id="@+id/ll_ca_confirm_viewpath"
                    style="@style/ll_interorder">
                    <TextView
                        android:text="是否具备CA"
@@ -337,7 +352,7 @@
                        style="@style/tv_content_inter"/>
 
                    <ImageView
-                       android:src="@mipmap/search"
+                       android:src="@mipmap/right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
@@ -350,6 +365,7 @@
                        android:text="备注"
                        style="@style/tv_title_inter"/>
                    <TextView
+                       android:id="@+id/real_reamk"
                        android:text="CA签章以汉办好，请等....."
                        style="@style/tv_content_inter"/>
                </LinearLayout>
@@ -359,107 +375,15 @@
            <!--入库明细-->
 
            <TextView
+               android:id="@+id/tv_title_logs"
                android:text="入库明细"
                style="@style/tv_title_itmes"/>
 
-
-           <RelativeLayout
-               android:padding="16dp"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent">
-
-               <TextView
-                   android:textSize="14sp"
-                   android:textColor="#111111"
-                   android:layout_width="wrap_content"
-                   android:text="丙乙烯 | 1000.00吨"
-                   android:layout_height="wrap_content"/>
-
-               <TextView
-                   android:textSize="14sp"
-                   android:textColor="#111111"
-                   android:layout_alignParentRight="true"
-                   android:text="内贸内销"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"/>
-
-           </RelativeLayout>
-
-
-
-
-           <LinearLayout
-               android:paddingRight="16dp"
-               android:paddingLeft="16dp"
-               android:layout_width="match_parent"
+           <GridLayout
                android:orientation="vertical"
-               android:layout_height="wrap_content">
-
-               <!--1-->
-               <LinearLayout
-                   android:paddingTop="0dp"
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="入库单号"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="10000"
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-               <!-- 2-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="进货罐号"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="T-101"
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-
-               <!-- 3-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="车牌号"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="沪A999999"
-                       style="@style/tv_content_inter"/>
-
-               </LinearLayout>
-
-
-               <!-- 4-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="入库时间"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="2018/1/1"
-                       style="@style/tv_content_inter"/>
-
-                   <ImageView
-                       android:src="@mipmap/search"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"/>
-               </LinearLayout>
-
-
-               <!-- 5-->
-               <LinearLayout
-                   style="@style/ll_interorder">
-                   <TextView
-                       android:text="备注"
-                       style="@style/tv_title_inter"/>
-                   <TextView
-                       android:text="CA签章以汉办好，请等....."
-                       style="@style/tv_content_inter"/>
-               </LinearLayout>
-
-           </LinearLayout>
-
+               android:id="@+id/gridLayout_logs"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
 
 
 
@@ -476,7 +400,7 @@
 
 
         <LinearLayout
-
+             android:id="@+id/ll_inter_refused_agree"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="48dp">
@@ -505,10 +429,6 @@
                 android:layout_height="match_parent"/>
 
         </LinearLayout>
-
-
-
-
 
 
     </LinearLayout>
